# noroi

./: Cargo.toml  Makefile  README.md
examples/: demo.c
include/: noroi.h
src/: anim.rs  ansi.rs  backend.rs  buffer.rs  event.rs  events.rs  ffi.rs  geom.rs  input.rs  layout.rs  lib.rs  lineedit.rs  style.rs  terminal.rs  theme.rs
src/sys/: mod.rs  unix.rs
src/widget/: block.rs  button.rs  clear.rs  gauge.rs  list.rs  mod.rs  paragraph.rs  spinner.rs  text.rs
tests/: render.rs
